--- a/odesk/index.html
+++ b/odesk/index.html
@@ -14,7 +14,7 @@
 		<nav class="header-navigation navbar navbar-inverse">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-10 col-lg-offset-1">
+					<div class="col-sm-10 col-sm-offset-1">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#">Mitglied werden</a></li>
 							<li><a href="#">Kontaki & ansperechpartner</a></li>
@@ -41,7 +41,7 @@
 	<nav class="main-nav navbar navbar-default">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-10 col-lg-offset-1">
+				<div class="col-sm-10 col-sm-offset-1">
 					<ul class="main-navigation nav navbar-nav">
 						<li class="active"><a href="#"><i class="fa fa-bars"></i></a></li>
 						<li><a href="#">Lorem Epsam Dolo</a></li>
@@ -179,7 +179,7 @@
 						</li>
 						<li><a href="#">Lorem Epsam</a></li>
 						<!--Search-->
-						<div class="col-lg-3 col-lg-3 navbar-right">
+						<div class="col-sm-3 col-sm-3 navbar-right">
 							<form class="navbar-form" role="search">
 							<div class="input-group">
 								<input type="text" class="form-control" placeholder="Search" name="q">
@@ -199,7 +199,7 @@
 	<div class="main-body">
 		<div class="container">
 			<div class="row">
-				<div class="main-body-nav col-lg-10 col-lg-offset-1">
+				<div class="main-body-nav col-sm-10 col-sm-offset-1">
 					<ul class="list-inline">
 						<li><a href="">Lorem Epsam</a></li>
 						<li><a href="">Lorem Epsam</a></li>
@@ -209,7 +209,7 @@
 				</div>
 			</div>
 			<div class="left-sidebar row">
-				<div class="col-lg-3 col-lg-offset-1">
+				<div class="col-sm-3 col-sm-offset-1">
 					<h2>Lorem Epsam</h2>
 					<ul class="list-unstyled parent-ul">
 						<li><a href="#">First Submenu</a></li>
@@ -244,7 +244,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="main-content-area col-lg-5">
+				<div class="main-content-area col-sm-5">
 					<h1>Lorem Ipsum is simply dummy text of the printing</h1>
 					<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
 					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
@@ -269,7 +269,7 @@
 					ea voluptate velit esse quam nihil molestiae consequatur, 
 					vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
 				</div>
-				<div class="right-sidebar col-lg-2">
+				<div class="right-sidebar col-sm-2">
 					<div class="outer-right">
 						<h3>Lorem ipsum dolor sit, amet</h3>
 						<div class="inner-right">
@@ -304,7 +304,7 @@
 		<nav class="navbar navbar-inverse">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-10 col-lg-offset-1">
+					<div class="col-sm-10 col-sm-offset-1">
 						<ul class="footer-icons nav navbar-nav">
 							<li><a href=""><i class="fa fa-facebook"></i></a></li>
 							<li><a href=""><i class="fa fa-youtube"></i></a></li>
