--- a/new - Copy/index.html
+++ b/new - Copy/index.html
@@ -12,8 +12,8 @@
 	
 	<nav class="navbar navbar-default">
 		<div class="container">
-		<div class="navbar-header">
-			<a href="" class="navbar-brand">OpenEarth</a>
+		<div class="page-logo">
+			<a href="" class=""><img src="images/h.png" class="navbar-brand img-responsive"></a>	
 		</div>
 		<ul class="nav navbar-nav">
 			<li><a href="#">Home</a></li>
@@ -30,8 +30,8 @@
 	<div class="row">
 		<h2 class="main-header">Choose Your Challange</h2>
 		<div class="col-sm-6 body-section">
-			<h3>Lavel 1 :Fast</h3>
-			<h5>OPEN ACCESS</h5>
+			<h3>Lavel1 :Fast</h3>
+			<h5>Open Access</h5>
 			<i class="fa fa-home"></i>
 			<p>Have fun answering questions, use your intuition, race with time,
 			leave your footprint on understanding ethical decisions.</p>
@@ -39,11 +39,11 @@
 			
 		</div>
 		<div class="col-sm-6 body-section">
-			<h3>Level 2: Slowt</h3>
-			<h5>NOT TOO SEVERE RESTICTIONS ADDED</h5>
+			<h3>Lavel1 :Fast</h3>
+			<h5>Open Access</h5>
 			<i class="fa fa-home"></i>
-			<p>Explore the intricate world of ethics, share your doubts, discuss with
-				others, build useful ethics systems.</p>
+			<p>Have fun answering questions, use your intuition, race with time,
+			leave your footprint on understanding ethical decisions.</p>
 			<a href="" class="btn btn-default">Play</a>
 			
 		</div>
