--- a/openearth-first-page/index.html
+++ b/openearth-first-page/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
 	
+	<div class="Second-page">
+		<a href="" class="left-button"><i class="fa fa-chevron-left"></i></a>
+		<p>I have deisgn another page.The page is fully responsive.
+		If you want to show the page 
+		<a href="https://rawgit.com/ahmedroman/HtmlWork/master/openearth-secon-page/index.html" 
+		class="btn btn-default" target="_blank">Click HERE</a></p>
+	</div>
+	
+	
+	
 	<nav class="navbar navbar-default">
 		<div class="container">
 		<div class="navbar-header">
