--- a/openearth-first-page/index.html
+++ b/openearth-first-page/index.html
@@ -15,8 +15,8 @@
 		<p>I have deisgn another page.The page is fully responsive.
 		If you want to show the page 
 		<a href="https://rawgit.com/ahmedroman/HtmlWork/master/openearth-secon-page/index.html" 
-		class="btn btn-default" target="_blank">Click HERE</a></p>
-		<a href="https://rawgit.com/ahmedroman/HtmlWork/master/openearth-third-page/index.html" 
+		class="btn btn-default" target="_blank">Click HERE</a>
+		<br/>Here is another page<a href="https://rawgit.com/ahmedroman/HtmlWork/master/openearth-third-page/index.html" 
 		class="btn btn-default" target="_blank">Another Page</a></p>
 	</div>
 	
